# LitRev

./: .gitignore  README.md  TODO.md  features.txt  gen.py  main.py  main.qml  pyproject.toml  requirements.txt  setup.py
app/: ai.py  config.py  controllers.py  main.py  retrieval.py  writing.py
components/: AppBar.qml  AppBarButton.qml
data/: cache.db
documentation/: workflow.md
litrev/: ai.py  config.py  controllers.py  main.py  models.py  retrieval.py
pages/: 1_input_page.qml
qml/: main.qml
qml/components/: AppBar.qml  CustomTextField.qml
tests/: test_imports.py  test_map_reduce.py  test_retrieval.py
ui/: Style.qml  main.qml
ui/components/: AppBar.qml  AppBarButton.qml  CustomRangeSlider.qml  CustomTextField.qml  IconButton.qml  qmldir
ui/pages/: 1_input_page.qml  2_query_generation_page.qml  3_corpus_selection_page.qml  4_search_retrieval_page.qml  5_article_screening_page.qml  6_review_generation_page.qml  7_editor_export_page.qml  qmldir
