[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "AutoLitRev"
readme = "README.md"
dependencies = [
  "PySide6",
  "openai",
  "PyPDF2",
  "python-docx",
  "requests",
  "pandas",
  "langchain",
]

[project.scripts]
litrev = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
